--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.7",
+    "@types/styled-components": "^5.1.26",
     "antd": "^5.7.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
@@ -21,7 +22,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "style-component": "^0.0.1",
-    "styled-components": "^5.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "use-sound": "^4.0.1"
