--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "style-component": "^0.0.1",
+    "styled-components": "^6.0.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "use-sound": "^4.0.1"
